# report_agent

./: .gitignore  README.md  interface.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: mcp-stdio-get-weather.py
src/report_agent/: agent.py  chat_model.py  run-streamlit.py  sql_interface.py
src/report_agent/agent/: __init__.py
src/report_agent/mcp/: client.py
src/script/: __init__.py  pandas_agent.py
src/scripts/: __init__.py
src/views/: mcp_client.py  pandas_agent.py  sql_agent.py
tests/: test_chat_model.py  test_mcp_client.py
tests/mcp_server/: mcp_test.py
