[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "report_agent"
version = "0.0.1"
dependencies = [
  "streamlit"
]
requires-python = ">=3.9"
authors = [
  {name = "n3xtchen", email = "echenwen@gmail.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
description = "Agent For Report"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["llm", "agent", "langchain"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [ ]

[project.urls]
Homepage = "https://n3xtchen.github.io/n3xtchen/"
Repository = "https://github.com/n3xtchen/report_agent"
"Bug Tracker" = "https://github.com/n3xtchen/report_agent/issues"

[project.scripts]
